# dev-ecosystem

./: README.md  flake.nix
.github/workflows/: ci.yml
flake-parts-experiment/: flake.nix
lib/: scripts.nix
pkgs/print-date/: README.md
pkgs/script-with-deps/: script-with-deps.sh
scripts/: README.md
scripts/my-first-script/: my-first-script.sh
scripts/print-date/: pyproject.toml
scripts/print-date/src/: __init__.py  print_date.py
scripts/print-date/tests/: test_print_date.py
scripts/script-with-deps/: script-with-deps.sh
