[tool.poetry]
name = "src"
version = "0.1.0"
description = "Prints the current date in Paris"
authors = ["Garrett George <garrett.michael.george@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[tool.poetry.scripts]
print-date = 'src:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
